--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
           <div class="col-lg-6">
             <div class="section_title text-center pb-30">
               <h5 class="sub_title">Portafolio</h5>
-              <h3 class="main_title">Poyectos Realizados</h3>
+              <h3 class="main_title">Proyectos Realizados</h3>
               <ul class="line">
                 <li></li>
                 <li></li>
